--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -208,7 +208,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                     app:layout_constraintStart_toStartOf="@+id/guideline_start"
-                    app:layout_constraintTop_toBottomOf="@id/tvHomeSeeMovieCast"
+                    app:layout_constraintTop_toBottomOf="@id/textView2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="16dp"/>
             </android.support.constraint.ConstraintLayout>
