--- a/app/src/main/res/layout/movie_browse_fragment.xml
+++ b/app/src/main/res/layout/movie_browse_fragment.xml
@@ -9,11 +9,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:floatingSearch_close_search_on_keyboard_dismiss="true"
-        app:floatingSearch_leftActionMode="showHamburger"
+        app:floatingSearch_leftActionMode="showSearch"
         app:floatingSearch_searchBarMarginLeft="5dp"
         app:floatingSearch_searchBarMarginRight="5dp"
         app:floatingSearch_searchBarMarginTop="5dp"
-        app:floatingSearch_searchHint="Search..."
+        app:floatingSearch_searchHint="@string/search"
         app:floatingSearch_showSearchKey="true"
         app:floatingSearch_suggestionsListAnimDuration="250"
         app:layout_constraintEnd_toEndOf="parent"
