--- a/app/src/main/res/layout/request_status.xml
+++ b/app/src/main/res/layout/request_status.xml
@@ -1,43 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:orientation="vertical">
+    android:layout_margin="16dp">
 
     <ProgressBar
         android:id="@+id/pbRequestStatusLoading"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_gravity="center"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/llRequestStatusError"
-        android:visibility="invisible">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="visible">
+
         <TextView
+            android:id="@+id/tvRequestStatusOops"
+            style="@style/LightMediumText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/oops"
+            android:textSize="56sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivRequestStatusBrokenRobot"
+            android:layout_width="0dp"
+            android:layout_height="140dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvRequestStatusOops"
+            app:srcCompat="@drawable/broken_robot" />
+
+        <TextView
+            android:id="@+id/tvRequestStatusErrorMessage"
+            style="@style/LightMediumText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/error_get_movie_list"/>
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:text="@string/error_something_went_wrong"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivRequestStatusBrokenRobot" />
 
         <Button
             android:id="@+id/btRequestStatusRetry"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="@string/try_again"/>
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvRequestStatusErrorMessage"
+            android:text="@string/try_again" />
+    </android.support.constraint.ConstraintLayout>
+
     <TextView
-        android:layout_margin="16dp"
+        android:id="@+id/tvRequestStatusEmptyMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textAlignment="center"
+        android:layout_margin="16dp"
         android:text="@string/the_list_is_empty"
-        android:id="@+id/tvRequestStatusEmptyMessage"/>
+        android:textAlignment="center" />
 </FrameLayout>
