--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -183,34 +183,62 @@
                     style="@style/Base.TextAppearance.AppCompat.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:text="@string/cast"
                     android:textStyle="bold"
-                    android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="@+id/guideline_start"
                     app:layout_constraintTop_toBottomOf="@+id/divider1" />
 
                 <!-- TODO: COMING SOON -->
-               <!-- <com.themovielist.ui.DrawableCompatTextView
-                    android:id="@+id/tvHomeSeeMovieCast"
-                    style="@style/LightMediumText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/see_all"
-                    app:drawableRightCompat="@drawable/chevron_right"
-                    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
-                    app:layout_constraintTop_toTopOf="@+id/textView2" />-->
+                <!-- <com.themovielist.ui.DrawableCompatTextView
+                     android:id="@+id/tvHomeSeeMovieCast"
+                     style="@style/LightMediumText"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="@string/see_all"
+                     app:drawableRightCompat="@drawable/chevron_right"
+                     app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+                     app:layout_constraintTop_toTopOf="@+id/textView2" />-->
 
                 <fragment
-                    android:layout_marginTop="16dp"
                     android:id="@+id/fragmentMovieDetailCast"
                     android:name="com.themovielist.moviecast.MovieCastListFragment"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                     app:layout_constraintStart_toStartOf="@+id/guideline_start"
-                    app:layout_constraintTop_toBottomOf="@id/textView2"
+                    app:layout_constraintTop_toBottomOf="@id/textView2" />
+
+                <View
+                    android:id="@+id/divider2"
+                    style="@style/ContentDivider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/fragmentMovieDetailCast" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/recommendations"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
+                    app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+                <fragment
+                    android:id="@+id/fragmentMovieRecommendationList"
+                    android:name="com.themovielist.recommendation.MovieRecommendationFragment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="16dp"/>
+                    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
+                    app:layout_constraintTop_toBottomOf="@id/textView3" />
             </android.support.constraint.ConstraintLayout>
         </FrameLayout>
 
