--- a/app/src/main/res/layout/favorite_fragment.xml
+++ b/app/src/main/res/layout/favorite_fragment.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.themovielist.ui.genrelist.GenreListView
-        android:id="@+id/glvGenreList"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <FrameLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/flMovieListDefaultSortContainer">
+       <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+           android:id="@+id/fragmentMovieList"
+           android:name="com.themovielist.movielist.MovieListFragment"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent" />
+   </FrameLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragmentUpcomingMovieList"
-        android:name="com.themovielist.movielist.MovieListFragment"
-        android:layout_width="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/glvGenreList" />
-</android.support.constraint.ConstraintLayout>
+   <!-- <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvMovieList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />-->
+</FrameLayout>
