--- a/app/src/main/res/layout/movie_browse_fragment.xml
+++ b/app/src/main/res/layout/movie_browse_fragment.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#d9d9d9">
+    android:layout_height="match_parent">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,6 +25,7 @@
 
 
         <FrameLayout
+            android:paddingTop="60dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
               android:visibility="gone">
               <fragment
                   android:id="@+id/fragmentBrowseMovieList"
-                  android:name="com.themovielist.movielistinator.MovieListinatorFragment"
+                  android:name="com.themovielist.movielist.MovieListFragment"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
           </FrameLayout>
