--- a/app/src/main/res/layout/in_theaters_fragment.xml
+++ b/app/src/main/res/layout/in_theaters_fragment.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <include
+        android:id="@+id/includeHeader"
+        layout="@layout/movie_header_detail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <fragment
+        android:id="@+id/fragmentMovieList"
+        android:name="com.themovielist.movielist.MovieListFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/includeHeader" />
+
+    <!--<com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sdvMovieHeaderBackdrop"
         android:layout_width="0dp"
         android:layout_height="@dimen/in_theaters_backdrop_height"
@@ -69,5 +87,5 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/tvMovieHeaderReleaseDate"
         app:layout_constraintStart_toStartOf="@+id/tvMovieHeaderReleaseDate"
-        fresco:text="Dunkirk" />
+        fresco:text="Dunkirk" />-->
 </android.support.constraint.ConstraintLayout>
