--- a/app/src/main/res/layout/movie_header_detail.xml
+++ b/app/src/main/res/layout/movie_header_detail.xml
@@ -52,13 +52,17 @@
     <TextView
         android:id="@+id/tvMovieHeaderMovieGenres"
         style="@style/LightMediumText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@id/separator"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator"
-        fresco:text="Action, Sci-Fi" />
+        fresco:text="Action, Sci-Fi, Action, Sci-Fi, Action, Sci-Fi,  " />
 
     <TextView
         android:id="@+id/tvMovieHeaderMovieName"
