--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
 
     <!-- Generic -->
     <dimen name="smallest_text_size">12sp</dimen>
+    <dimen name="default_icon_size">24dp</dimen>
 
     <!-- In Theaters -->
     <dimen name="in_theaters_backdrop_height">240dp</dimen>
