--- a/app/src/main/res/layout/request_status.xml
+++ b/app/src/main/res/layout/request_status.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/oops"
-            android:textSize="56sp"
+            android:textSize="@dimen/text_error_title_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +34,7 @@
         <ImageView
             android:id="@+id/ivRequestStatusBrokenRobot"
             android:layout_width="0dp"
-            android:layout_height="140dp"
+            android:layout_height="@dimen/error_robot_height"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
