--- a/app/src/main/res/layout/in_theaters_fragment.xml
+++ b/app/src/main/res/layout/in_theaters_fragment.xml
@@ -26,15 +26,13 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
-
-    <fragment
-        android:id="@+id/fragmentMovieList"
-        android:name="com.themovielist.movielist.MovieListFragment"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/flInTheatersMovieListContainer"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includeHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/includeHeader"/>
 </android.support.design.widget.CoordinatorLayout>
