--- a/app/src/main/res/layout/movie_list_item_image_view.xml
+++ b/app/src/main/res/layout/movie_list_item_image_view.xml
@@ -28,19 +28,12 @@
         app:layout_constraintTop_toTopOf="@+id/sdvMovieImageView"
         app:srcCompat="@drawable/camera_off" />
 
-    <com.github.ivbaranov.mfb.MaterialFavoriteButton
+    <com.themovielist.ui.FavoriteButton
         android:id="@+id/mfbMovieImageViewFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/favorite_button_size"
+        android:layout_height="@dimen/favorite_button_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:mfb_animate_favorite="false"
-        app:mfb_animate_unfavorite="false"
-        app:mfb_favorite_image="@drawable/heart"
-        app:mfb_not_favorite_image="@drawable/heart_outline"
-        app:mfb_padding="4"
-        app:mfb_size="36"
-        app:mfb_type="heart" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvMovieImageViewName"
