--- a/app/src/main/res/layout/favorite_fragment.xml
+++ b/app/src/main/res/layout/favorite_fragment.xml
@@ -6,11 +6,5 @@
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:id="@+id/flMovieListDefaultSortContainer">
-       <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-           android:id="@+id/fragmentFavoriteMovieList"
-           android:name="com.themovielist.movielist.MovieListFragment"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent" />
-   </FrameLayout>
+       android:id="@+id/flMovieListDefaultSortContainer" />
 </FrameLayout>
