--- a/app/src/main/res/layout/movie_recommendation_fragment.xml
+++ b/app/src/main/res/layout/movie_recommendation_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragmentMovieRecommendationList"
-    android:name="com.themovielist.home.partiallist.HomeMovieListFragment"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/flMovieRecommendationListContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
