--- a/app/src/main/res/layout/movie_browse_fragment.xml
+++ b/app/src/main/res/layout/movie_browse_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:visibility="gone">
     </FrameLayout>
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:id="@+id/clMovieBrowseBackdropContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,5 +39,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivMagnify" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 </FrameLayout>
