--- a/app/src/main/res/layout/movie_list_item_image_view.xml
+++ b/app/src/main/res/layout/movie_list_item_image_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toTopOf="@+id/ivMovieDetailRatingIcon"
         tools:text="7.6" />
 
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,4 +112,4 @@
         app:layout_constraintStart_toEndOf="@+id/ivMovieDetailCalendarIcon"
         app:layout_constraintTop_toTopOf="@+id/ivMovieDetailCalendarIcon"
         tools:text="2017" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
