--- a/app/src/main/res/layout/request_status.xml
+++ b/app/src/main/res/layout/request_status.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:visibility="invisible" />
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:id="@+id/llRequestStatusError"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -64,7 +64,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/tvRequestStatusErrorMessage"
             android:text="@string/try_again" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 
     <TextView
         android:id="@+id/tvRequestStatusEmptyMessage"
