--- a/app/src/main/res/layout/home_movie_list_item.xml
+++ b/app/src/main/res/layout/home_movie_list_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/home_movie_list_image_width"
     android:layout_height="wrap_content">
     <com.themovielist.ui.movieimageview.MovieImageView
         android:id="@+id/mivHomeMovieItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</androidx.constraintlayout.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
