--- a/app/src/main/res/drawable/sort.xml
+++ b/app/src/main/res/drawable/sort.xml
@@ -3,5 +3,7 @@
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#FFFFFF" android:pathData="M10,13V11H18V13H10M10,19V17H14V19H10M10,7V5H22V7H10M6,17H8.5L5,20.5L1.5,17H4V7H1.5L5,3.5L8.5,7H6V17Z" />
+    <path android:fillColor="#FFFFFF" android:pathData="M4,18h4c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H4c-0.55,0-1,0.45-1,1v0C3,17.55,3.45,18,4,18z M3,7L3,7c0,0.55,0.45,1,1,1
+		h16c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H4C3.45,6,3,6.45,3,7z M4,13h10c0.55,0,1-0.45,1-1v0c0-0.55-0.45-1-1-1H4
+		c-0.55,0-1,0.45-1,1v0C3,12.55,3.45,13,4,13z" />
 </vector>
