--- a/app/src/main/res/layout/movie_header_detail.xml
+++ b/app/src/main/res/layout/movie_header_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -74,4 +74,4 @@
         app:layout_constraintBottom_toTopOf="@+id/tvMovieHeaderReleaseDate"
         app:layout_constraintStart_toStartOf="@+id/tvMovieHeaderReleaseDate"
         fresco:text="Dunkirk" />
-</androidx.constraintlayout.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
