- Extending the AndroidX support classes

--- a/app/src/main/res/layout/activity_home_full_movie_list.xml
+++ b/app/src/main/res/layout/activity_home_full_movie_list.xml
@@ -13,14 +13,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/flHomeFullHomeMovieList"
-        android:name="com.themovielist.movielist.MovieListFragment"
+    <fragment
         android:layout_width="0dp"
         android:layout_marginTop="8dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/glvGenreList" />
+        app:layout_constraintTop_toBottomOf="@+id/glvGenreList"
+        android:name="com.themovielist.movielist.MovieListFragment"
+        android:id="@+id/fragmentMovieListHomeList" />
 </androidx.constraintlayout.widget.ConstraintLayout>
